--- a/src/assets/component/_reset.scss
+++ b/src/assets/component/_reset.scss
@@ -18,7 +18,9 @@ body{
     // background: #00c6ff;  /* fallback for old browsers */
     // background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
     // background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-color: rgb(44, 87, 196);
+    background-color: rgb(29, 81, 213);
+    // background-color: #08074c;
+    // background-color: #0000CD;
     // background: linear-gradient(90deg, rgba(186,35,254,1) 0%, rgba(159,47,255,1) 18%, rgba(132,56,250,1) 100%);
         //  background-color: #fff;
 }
