--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -10,6 +10,7 @@
 @import './component/customer';
 @import './component/counter';
 @import './component/contact';
+@import './component/subcribe';
 @import './component/mixin';
 @import './component/responsive';
 
