--- a/src/assets/component/_services.scss
+++ b/src/assets/component/_services.scss
@@ -17,12 +17,9 @@
             .item{
                 text-align: center;
                 padding: 30px;
-                // border: 1px solid #333;
-                // transform: scale(1);
                 transform: translateY(0);
                 &:hover{
                     transition: all 0.5s ease;
-                    // transform: scale(1.1);
                     box-shadow: rgba(85, 93, 100, 0.2) 0px 8px 24px;
                     border-radius: 20px;
                     transform: translateY(-20px);
@@ -31,7 +28,7 @@
                     text-align: center;
                     font-size: 22px;
                     font-weight: bold;
-                    color: $-color-333;
+                    color: $--color-white;
                     text-decoration: none;
                     margin: 20px 0;
                     font-family: 'Open Sans', sans-serif;
@@ -40,7 +37,7 @@
                     margin-top: 10px;
                     line-height: 24px;
                     letter-spacing: 1.2px;
-                    color: $-color-333;
+                    color: $--color-p;
                     font-size: 14px;
                     font-family: 'Open Sans', sans-serif;
                 }
@@ -49,7 +46,7 @@
                         width: 15%;
                         height: 100%;
                         object-fit: cover;
-                        filter:brightness(200%)
+                        filter:brightness(200%);
                     }
                 }
                 
