--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -19,7 +19,7 @@ a {
 }
 
 body {
-  background-color: rgb(44, 87, 196);
+  background-color: rgb(29, 81, 213);
 }
 
 .header {
@@ -27,7 +27,6 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 10px 90px;
-  box-shadow: rgba(85, 89, 91, 0.2) 0px 8px 24px;
 }
 .header .logo a img {
   width: 90px;
@@ -37,7 +36,7 @@ body {
   display: flex;
 }
 .header .navbar .menu li {
-  padding: 7px 15px;
+  margin-right: 20px;
   position: relative;
 }
 .header .navbar .menu li a {
@@ -50,22 +49,32 @@ body {
 .header .navbar .menu li a:hover {
   color: blue;
 }
+.header .navbar .menu li a:hover::before, .header .navbar .menu li a:hover::after {
+  width: 50%;
+}
+.header .navbar .menu li a::before {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  width: 0%;
+  height: 2px;
+  background-color: #fff;
+  transition: all 0.3s ease-in;
+}
 .header .navbar .menu li a::after {
   content: "";
   position: absolute;
   bottom: 0px;
-  left: 0;
-  background-color: #000;
+  right: 50%;
   width: 0%;
   height: 2px;
-}
-.header .navbar .menu li a:hover::after {
-  width: 100%;
-  transition: all 0.3s linear;
+  background-color: #fff;
+  transition: all 0.3s ease-in;
 }
 .header .icon-bar {
   font-size: 22px;
-  color: #000;
+  color: #fff;
   display: none;
 }
 
@@ -220,7 +229,7 @@ body {
   text-align: center;
   font-size: 22px;
   font-weight: bold;
-  color: #333;
+  color: #fff;
   text-decoration: none;
   margin: 20px 0;
   font-family: "Open Sans", sans-serif;
@@ -229,7 +238,7 @@ body {
   margin-top: 10px;
   line-height: 24px;
   letter-spacing: 1.2px;
-  color: #333;
+  color: #F5F5F5;
   font-size: 14px;
   font-family: "Open Sans", sans-serif;
 }
@@ -488,16 +497,21 @@ body {
 
 .contact .contact-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   overflow: hidden;
-  padding: 20px 30px;
+  padding: 40px;
 }
 .contact .contact-container iframe {
-  border-radius: 8px;
+  flex: 1 1 45rem;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 30rem;
 }
 .contact .contact-container form {
-  margin-left: 20px;
+  flex: 1 1 45rem;
+  padding: 5rem;
 }
 .contact .contact-container form h1 {
   text-align: center;
@@ -510,26 +524,28 @@ body {
 }
 .contact .contact-container form .form-list .input_field input[type=text] {
   padding: 10px 20px;
-  min-width: 400px;
+  width: 100%;
 }
 .contact .contact-container form .form-list .input_field textarea {
-  resize: none;
+  resize: vertical;
+  width: 100%;
+  min-height: 80px;
+  height: 100px;
+  max-height: 200px;
+  -ms-scroll-chaining: none;
+      overscroll-behavior: contain;
   height: 150px;
   border: 1px solid #e0e0e0;
-  width: 100%;
   padding: 10px 20px;
 }
 .contact .contact-container form .form-list .btn input[type=submit] {
   border: 0px;
-  margin-top: 10px;
-  padding: 10px;
-  text-align: center;
+  padding: 10px 0;
   width: 100%;
   color: #332902;
   text-transform: uppercase;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
   font-weight: bold;
-  border-radius: 10px;
   cursor: pointer;
 }
 .contact .contact-container #error_message {
@@ -559,6 +575,12 @@ body {
   .accordion-list {
     max-width: 100%;
     padding: 0 !important;
+  }
+  .contact .contact-container {
+    padding: 20px;
+  }
+  .contact .contact-container form {
+    padding: 2rem;
   }
 }
 @media (max-width: 768px) {
@@ -595,9 +617,6 @@ body {
   }
   .header .navbar .menu li a {
     color: #fff;
-  }
-  .header .navbar .fa-times {
-    color: #fff !important;
   }
   .navbar.active .menu {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
@@ -693,13 +712,17 @@ body {
   .contact .contact-container {
     display: flex;
     flex-direction: column-reverse;
-    padding: 20px 10px !important;
+    padding: 10px;
   }
-  .contact .contact-container .map {
-    padding: 20px;
+  .contact .contact-container iframe {
+    margin-top: -100px;
+    padding: 0 20px;
   }
   .contact .contact-container form {
-    margin-bottom: 30px;
+    padding: 0 !important;
+  }
+  .contact .contact-container form .form-list .input_field input[type=text] {
+    min-width: 400px;
   }
 }
 @media (max-width: 440px) {
@@ -735,5 +758,17 @@ body {
     width: 100%;
     height: 25vmin;
     font-size: 8px;
+  }
+  .contact .contact-container {
+    padding: 10px;
+  }
+  .contact .contact-container iframe {
+    padding: 0 20px;
+  }
+  .contact .contact-container form {
+    padding: 0 !important;
+  }
+  .contact .contact-container form .form-list .input_field input[type=text] {
+    min-width: 300px;
   }
 }/*# sourceMappingURL=index.css.map */
