--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -225,6 +225,13 @@ body {
   border-radius: 20px;
   transform: translateY(-20px);
 }
+.services .services-container .services-list .item .item-image img {
+  width: 15%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: brightness(200%);
+}
 .services .services-container .services-list .item a {
   text-align: center;
   font-size: 22px;
@@ -241,13 +248,6 @@ body {
   color: #F5F5F5;
   font-size: 14px;
   font-family: "Open Sans", sans-serif;
-}
-.services .services-container .services-list .item .item-image img {
-  width: 15%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  filter: brightness(200%);
 }
 
 .accordion .accordion-list {
@@ -300,6 +300,61 @@ body {
   padding: 1rem;
 }
 
+.blog .blog-title {
+  margin-top: 30px;
+}
+.blog .blog-title h1 {
+  text-align: center;
+  font-size: 36px;
+  color: #F5F5F5;
+}
+.blog .blog-title h3 {
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.785);
+  letter-spacing: 1px;
+}
+.blog .blog-content .blog-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  grid-gap: 20px;
+  padding: 30px 60px;
+}
+.blog .blog-content .blog-container .blog-box .blog-item {
+  width: 100%;
+  min-height: 300px;
+  background-color: #fff;
+  overflow: hidden;
+}
+.blog .blog-content .blog-container .blog-box .blog-item:hover img {
+  transform: scale(1.1);
+  transition: all 0.2s ease-in;
+}
+.blog .blog-content .blog-container .blog-box .blog-item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.blog .blog-content .blog-container .blog-box .blog-item .blog-info {
+  padding: 30px;
+}
+.blog .blog-content .blog-container .blog-box .blog-item .blog-info h1 {
+  font-size: 16px;
+  color: #000;
+  margin-bottom: 10px;
+}
+.blog .blog-content .blog-container .blog-box .blog-item .blog-info h3 {
+  color: #F5F5F5;
+  font-size: 12px;
+  color: #000;
+}
+.blog .blog-content .blog-container .blog-box .blog-item .blog-info h3 a {
+  color: rgba(0, 0, 0, 0.468);
+}
+
 .customer {
   overflow: hidden;
 }
@@ -325,7 +380,6 @@ body {
 .customer .customer-container .slide-container {
   max-width: 1000px;
   margin: 0 auto;
-  width: 100%;
   padding: 40px 0;
 }
 .customer .customer-container .slide-container .slide-content {
@@ -432,21 +486,20 @@ body {
 .customer .customer-container .slide-container .swiper-navBtn::before, .customer .customer-container .slide-container .swiper-navBtn::after {
   font-size: 35px;
 }
+.customer .customer-container .slide-container .swiper-button-next, .customer .customer-container .slide-container .swiper-button-prev {
+  width: calc(var(--swiper-navigation-size) / 44 * 14) !important;
+  height: calc(var(--swiper-navigation-size) / 44 * 16) !important;
+}
 .customer .customer-container .slide-container .swiper-button-next {
-  right: 0;
-  width: calc(var(18px) / 26 * 20);
-  height: 18px;
-  display: none;
+  right: 10px;
 }
 .customer .customer-container .slide-container .swiper-button-prev {
-  left: 0;
-  width: calc(var(18px) / 26 * 20);
-  height: 18px;
-  display: none;
+  left: 10px;
 }
 .customer .customer-container .slide-container .swiper-pagination-bullet {
   background-color: #6E93f7;
   opacity: 1;
+  display: none;
 }
 .customer .customer-container .slide-container .swiper-pagination-bullet-active {
   background-color: #4070F4;
@@ -507,7 +560,7 @@ body {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  height: 30rem;
+  height: 25rem;
 }
 .contact .contact-container form {
   flex: 1 1 45rem;
@@ -709,14 +762,25 @@ body {
   .customer .customer-container .slide-container .cart-wrapper .swiper-pagination {
     display: none;
   }
+  .blog .blog-title h1 {
+    font-size: 32px;
+  }
+  .blog .blog-title h3 {
+    font-size: 12px;
+    padding: 10px 20px;
+  }
+  .blog .blog-content .blog-container {
+    padding: 30px;
+  }
   .contact .contact-container {
     display: flex;
     flex-direction: column-reverse;
     padding: 10px;
   }
   .contact .contact-container iframe {
-    margin-top: -100px;
+    margin-top: -170px;
     padding: 0 20px;
+    height: 10rem !important;
   }
   .contact .contact-container form {
     padding: 0 !important;
@@ -763,7 +827,7 @@ body {
     padding: 10px;
   }
   .contact .contact-container iframe {
-    padding: 0 20px;
+    padding: 0 30px;
   }
   .contact .contact-container form {
     padding: 0 !important;
