--- a/src/assets/component/_responsive.scss
+++ b/src/assets/component/_responsive.scss
@@ -228,10 +228,18 @@
                                 }
                         }
                     }
-                    .swiper-pagination{
-                        display: none;
-                    }
+                    
+                 
                 }
+            }
+            .swiper-button-next{
+                display: none !important;
+            }
+            .swiper-button-prev{
+                display: none !important;
+            }
+            .swiper-pagination{
+                display: none;
             }
         }
     }
